# fastapi-tp6-ai-sidecar

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  fast  package.sh  pyproject.toml  requirements.txt  start.sh  test_connections.py
app/: app.py  dependencies.py  main.py
app/ai/: CLAUDE.md  __init__.py  chat.py  models.py  processing.py  prompts.py  rag.py
app/annotations/: CLAUDE.md  __init__.py  cache.py  log.py  rate_limit.py
app/command/: CLAUDE.md  __init__.py  sync_vector.py  sync_wecom_article.py  test.py
app/core/: CLAUDE.md  __init__.py  arq.py  config.py  constants.py  context.py  exceptions.py  redis.py  response.py  security.py
app/middlewares/: CLAUDE.md  context_cleanup_middleware.py  cors_middleware.py  gzip_middleware.py
app/models/: CLAUDE.md  article_news.py  user.py  wecom_msg_cursor.py
app/parsers/: CLAUDE.md  README.md  __init__.py  base.py  generic.py  mallchina.py  vlm_prompt.py  wechat.py  winshang.py
app/routers/: CLAUDE.md  article.py  article_news.py  hello.py  langchain.py  user.py  wechat.py
app/schemas/: CLAUDE.md  __init__.py  article.py  article_news.py  langchain.py  vlm.py
app/services/: CLAUDE.md  __init__.py  article.py  article_news.py  dify_sync.py  hello.py  langchain.py  oss_image.py  user.py  vlm_image.py  wechat.py
doc/: README.md  dify知识库更新.md  httpx_usage.md  production_deployment.md  pydantic_usage.md  tortoise_orm_usage.md  uv_usage.md  快捷部署.md
tests/: README.md  __init__.py  conftest.py  pytest.ini
workers/: run_worker.py
(+48 files in other folders)
